Update frontend to 2.13

--- a/inst/rmarkdown/resources/govuk.css
+++ b/inst/rmarkdown/resources/govuk.css
@@ -105,7 +105,7 @@
     .govuk-list {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-list {
       font-size: 14pt;
@@ -174,7 +174,7 @@
     .govuk-heading-xl {
       font-size: 48px;
       font-size: 3rem;
-      line-height: 1.04167; } }
+      line-height: 1.0416666667; } }
   @media print {
     .govuk-heading-xl {
       font-size: 32pt;
@@ -191,7 +191,7 @@
   font-weight: 700;
   font-size: 24px;
   font-size: 1.5rem;
-  line-height: 1.04167;
+  line-height: 1.0416666667;
   display: block;
   margin-top: 0;
   margin-bottom: 20px; }
@@ -205,7 +205,7 @@
     .govuk-heading-l {
       font-size: 36px;
       font-size: 2.25rem;
-      line-height: 1.11111; } }
+      line-height: 1.1111111111; } }
   @media print {
     .govuk-heading-l {
       font-size: 24pt;
@@ -222,7 +222,7 @@
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   display: block;
   margin-top: 0;
   margin-bottom: 15px; }
@@ -267,7 +267,7 @@
     .govuk-heading-s {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-heading-s {
       font-size: 14pt;
@@ -283,7 +283,7 @@
   font-weight: 400;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   display: block;
   margin-bottom: 5px;
   color: #6f777b; }
@@ -294,7 +294,7 @@
     .govuk-caption-xl {
       font-size: 27px;
       font-size: 1.6875rem;
-      line-height: 1.11111; } }
+      line-height: 1.1111111111; } }
   @media print {
     .govuk-caption-xl {
       font-size: 18pt;
@@ -307,7 +307,7 @@
   font-weight: 400;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   display: block;
   margin-bottom: 5px;
   color: #6f777b; }
@@ -344,7 +344,7 @@
     .govuk-caption-m {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-caption-m {
       font-size: 14pt;
@@ -358,7 +358,7 @@
   font-weight: 400;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   margin-top: 0;
   margin-bottom: 20px; }
   @media print {
@@ -401,7 +401,7 @@
     .govuk-body-m, .govuk-body {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-body-m, .govuk-body {
       font-size: 14pt;
@@ -418,7 +418,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   margin-top: 0;
   margin-bottom: 15px; }
   @media print {
@@ -461,7 +461,7 @@
     .govuk-body-xs {
       font-size: 14px;
       font-size: 0.875rem;
-      line-height: 1.42857; } }
+      line-height: 1.4285714286; } }
   @media print {
     .govuk-body-xs {
       font-size: 12pt;
@@ -729,7 +729,7 @@
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   display: inline-block;
   margin-bottom: 0;
   padding-top: 15px; }
@@ -781,7 +781,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   font-family: "nta", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -901,7 +901,7 @@
 .govuk-back-link {
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   font-family: "nta", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -961,7 +961,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   color: #0b0c0c;
   margin-top: 15px;
   margin-bottom: 10px; }
@@ -1108,8 +1108,7 @@
 .govuk-button--disabled,
 .govuk-button[disabled="disabled"],
 .govuk-button[disabled] {
-  opacity: 0.5;
-  background: #00823b; }
+  opacity: 0.5; }
   .govuk-button--disabled:hover,
   .govuk-button[disabled="disabled"]:hover,
   .govuk-button[disabled]:hover {
@@ -1132,6 +1131,8 @@
     color: #0b0c0c; }
   .govuk-button--secondary:hover, .govuk-button--secondary:focus {
     background-color: #c8cacb; }
+    .govuk-button--secondary:hover[disabled], .govuk-button--secondary:focus[disabled] {
+      background-color: #dee0e2; }
 
 .govuk-button--warning {
   background-color: #b10e1e;
@@ -1140,6 +1141,8 @@
     color: #ffffff; }
   .govuk-button--warning:hover, .govuk-button--warning:focus {
     background-color: #8e0b18; }
+    .govuk-button--warning:hover[disabled], .govuk-button--warning:focus[disabled] {
+      background-color: #b10e1e; }
 
 .govuk-button--start {
   font-weight: 700;
@@ -1195,7 +1198,7 @@
     .govuk-error-message {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-error-message {
       font-size: 14pt;
@@ -1239,7 +1242,7 @@
     .govuk-fieldset__legend {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-fieldset__legend {
       font-size: 14pt;
@@ -1264,7 +1267,7 @@
     .govuk-fieldset__legend--xl {
       font-size: 48px;
       font-size: 3rem;
-      line-height: 1.04167; } }
+      line-height: 1.0416666667; } }
   @media print {
     .govuk-fieldset__legend--xl {
       font-size: 32pt;
@@ -1277,7 +1280,7 @@
   font-weight: 700;
   font-size: 24px;
   font-size: 1.5rem;
-  line-height: 1.04167;
+  line-height: 1.0416666667;
   margin-bottom: 15px; }
   @media print {
     .govuk-fieldset__legend--l {
@@ -1286,7 +1289,7 @@
     .govuk-fieldset__legend--l {
       font-size: 36px;
       font-size: 2.25rem;
-      line-height: 1.11111; } }
+      line-height: 1.1111111111; } }
   @media print {
     .govuk-fieldset__legend--l {
       font-size: 24pt;
@@ -1299,7 +1302,7 @@
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   margin-bottom: 15px; }
   @media print {
     .govuk-fieldset__legend--m {
@@ -1329,7 +1332,7 @@
     .govuk-fieldset__legend--s {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-fieldset__legend--s {
       font-size: 14pt;
@@ -1358,7 +1361,7 @@
     .govuk-hint {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-hint {
       font-size: 14pt;
@@ -1392,7 +1395,7 @@
     .govuk-label {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-label {
       font-size: 14pt;
@@ -1417,7 +1420,7 @@
     .govuk-label--xl {
       font-size: 48px;
       font-size: 3rem;
-      line-height: 1.04167; } }
+      line-height: 1.0416666667; } }
   @media print {
     .govuk-label--xl {
       font-size: 32pt;
@@ -1430,7 +1433,7 @@
   font-weight: 700;
   font-size: 24px;
   font-size: 1.5rem;
-  line-height: 1.04167;
+  line-height: 1.0416666667;
   margin-bottom: 15px; }
   @media print {
     .govuk-label--l {
@@ -1439,7 +1442,7 @@
     .govuk-label--l {
       font-size: 36px;
       font-size: 2.25rem;
-      line-height: 1.11111; } }
+      line-height: 1.1111111111; } }
   @media print {
     .govuk-label--l {
       font-size: 24pt;
@@ -1452,7 +1455,7 @@
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   margin-bottom: 10px; }
   @media print {
     .govuk-label--m {
@@ -1482,7 +1485,7 @@
     .govuk-label--s {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-label--s {
       font-size: 14pt;
@@ -1512,7 +1515,7 @@
     .govuk-checkboxes__item {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-checkboxes__item {
       font-size: 14pt;
@@ -1691,7 +1694,7 @@
     .govuk-summary-list {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-summary-list {
       font-size: 14pt;
@@ -1839,7 +1842,7 @@
     .govuk-input {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-input {
       font-size: 14pt;
@@ -1916,7 +1919,7 @@
     .govuk-details {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-details {
       font-size: 14pt;
@@ -2018,7 +2021,7 @@
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   margin-top: 0;
   margin-bottom: 15px; }
   @media print {
@@ -2052,7 +2055,7 @@
     .govuk-error-summary__body {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-error-summary__body {
       font-size: 14pt;
@@ -2095,7 +2098,7 @@
     .govuk-file-upload {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-file-upload {
       font-size: 14pt;
@@ -2117,7 +2120,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   padding-top: 25px;
   padding-bottom: 15px;
   border-top: 1px solid #a1acb2;
@@ -2321,7 +2324,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   border-bottom: 10px solid #ffffff;
   color: #ffffff;
   background: #0b0c0c; }
@@ -2375,7 +2378,7 @@
   font-weight: 400;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   display: inline-table;
   padding-right: 10px; }
   @media print {
@@ -2430,7 +2433,7 @@
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111; }
+  line-height: 1.1111111111; }
   @media print {
     .govuk-header__link--service-name {
       font-family: sans-serif; } }
@@ -2474,7 +2477,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   display: none;
   position: absolute;
   top: 20px;
@@ -2578,7 +2581,7 @@
     font-weight: 700;
     font-size: 14px;
     font-size: 0.875rem;
-    line-height: 1.14286;
+    line-height: 1.1428571429;
     white-space: nowrap; }
     @media print {
       .govuk-header__navigation-item a {
@@ -2614,8 +2617,7 @@
   .govuk-header__link:after {
     display: none; } }
 
-.govuk-header__logotype-crown,
-.govuk-header__logotype-crown-fallback-image {
+.govuk-header__logotype-crown {
   position: relative;
   top: -4px; }
 
@@ -2643,7 +2645,7 @@
     .govuk-inset-text {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-inset-text {
       font-size: 14pt;
@@ -2683,7 +2685,7 @@
     .govuk-panel {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-panel {
       font-size: 14pt;
@@ -2713,7 +2715,7 @@
     .govuk-panel__title {
       font-size: 48px;
       font-size: 3rem;
-      line-height: 1.04167; } }
+      line-height: 1.0416666667; } }
   @media print {
     .govuk-panel__title {
       font-size: 32pt;
@@ -2729,7 +2731,7 @@
   font-weight: 400;
   font-size: 24px;
   font-size: 1.5rem;
-  line-height: 1.04167; }
+  line-height: 1.0416666667; }
   @media print {
     .govuk-panel__body {
       font-family: sans-serif; } }
@@ -2737,7 +2739,7 @@
     .govuk-panel__body {
       font-size: 36px;
       font-size: 2.25rem;
-      line-height: 1.11111; } }
+      line-height: 1.1111111111; } }
   @media print {
     .govuk-panel__body {
       font-size: 24pt;
@@ -2789,7 +2791,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   color: #0b0c0c;
   display: table;
   margin: 0; }
@@ -2834,7 +2836,7 @@
     .govuk-tabs {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-tabs {
       font-size: 14pt;
@@ -2865,7 +2867,7 @@
     .govuk-tabs__title {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-tabs__title {
       font-size: 14pt;
@@ -2927,7 +2929,7 @@
     .govuk-tabs__tab {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-tabs__tab {
       font-size: 14pt;
@@ -3016,7 +3018,7 @@
     .govuk-radios__item {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-radios__item {
       font-size: 14pt;
@@ -3122,7 +3124,7 @@
     .govuk-radios__divider {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-radios__divider {
       font-size: 14pt;
@@ -3254,7 +3256,7 @@
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   display: block;
   padding: 10px 15px; }
   .govuk-skip-link:active, .govuk-skip-link:focus {
@@ -3313,7 +3315,7 @@
     .govuk-table {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-table {
       font-size: 14pt;
@@ -3415,7 +3417,7 @@
     .govuk-warning-text {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-warning-text {
       font-size: 14pt;
@@ -4123,7 +4125,7 @@
 .govuk-\!-font-size-80 {
   font-size: 53px !important;
   font-size: 3.3125rem !important;
-  line-height: 1.03774 !important; }
+  line-height: 1.0377358491 !important; }
   @media (min-width: 40.0625em) {
     .govuk-\!-font-size-80 {
       font-size: 80px !important;
@@ -4142,7 +4144,7 @@
     .govuk-\!-font-size-48 {
       font-size: 48px !important;
       font-size: 3rem !important;
-      line-height: 1.04167 !important; } }
+      line-height: 1.0416666667 !important; } }
   @media print {
     .govuk-\!-font-size-48 {
       font-size: 32pt !important;
@@ -4151,12 +4153,12 @@
 .govuk-\!-font-size-36 {
   font-size: 24px !important;
   font-size: 1.5rem !important;
-  line-height: 1.04167 !important; }
+  line-height: 1.0416666667 !important; }
   @media (min-width: 40.0625em) {
     .govuk-\!-font-size-36 {
       font-size: 36px !important;
       font-size: 2.25rem !important;
-      line-height: 1.11111 !important; } }
+      line-height: 1.1111111111 !important; } }
   @media print {
     .govuk-\!-font-size-36 {
       font-size: 24pt !important;
@@ -4165,12 +4167,12 @@
 .govuk-\!-font-size-27 {
   font-size: 18px !important;
   font-size: 1.125rem !important;
-  line-height: 1.11111 !important; }
+  line-height: 1.1111111111 !important; }
   @media (min-width: 40.0625em) {
     .govuk-\!-font-size-27 {
       font-size: 27px !important;
       font-size: 1.6875rem !important;
-      line-height: 1.11111 !important; } }
+      line-height: 1.1111111111 !important; } }
   @media print {
     .govuk-\!-font-size-27 {
       font-size: 18pt !important;
@@ -4179,7 +4181,7 @@
 .govuk-\!-font-size-24 {
   font-size: 18px !important;
   font-size: 1.125rem !important;
-  line-height: 1.11111 !important; }
+  line-height: 1.1111111111 !important; }
   @media (min-width: 40.0625em) {
     .govuk-\!-font-size-24 {
       font-size: 24px !important;
@@ -4198,7 +4200,7 @@
     .govuk-\!-font-size-19 {
       font-size: 19px !important;
       font-size: 1.1875rem !important;
-      line-height: 1.31579 !important; } }
+      line-height: 1.3157894737 !important; } }
   @media print {
     .govuk-\!-font-size-19 {
       font-size: 14pt !important;
@@ -4207,7 +4209,7 @@
 .govuk-\!-font-size-16 {
   font-size: 14px !important;
   font-size: 0.875rem !important;
-  line-height: 1.14286 !important; }
+  line-height: 1.1428571429 !important; }
   @media (min-width: 40.0625em) {
     .govuk-\!-font-size-16 {
       font-size: 16px !important;
@@ -4226,7 +4228,7 @@
     .govuk-\!-font-size-14 {
       font-size: 14px !important;
       font-size: 0.875rem !important;
-      line-height: 1.42857 !important; } }
+      line-height: 1.4285714286 !important; } }
   @media print {
     .govuk-\!-font-size-14 {
       font-size: 12pt !important;
