--- a/inst/rmarkdown/resources/govukish.css
+++ b/inst/rmarkdown/resources/govukish.css
@@ -72,7 +72,7 @@
     .govuk-list {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-list {
       font-size: 14pt;
@@ -141,7 +141,7 @@
     .govuk-heading-xl {
       font-size: 48px;
       font-size: 3rem;
-      line-height: 1.04167; } }
+      line-height: 1.0416666667; } }
   @media print {
     .govuk-heading-xl {
       font-size: 32pt;
@@ -158,7 +158,7 @@
   font-weight: 700;
   font-size: 24px;
   font-size: 1.5rem;
-  line-height: 1.04167;
+  line-height: 1.0416666667;
   display: block;
   margin-top: 0;
   margin-bottom: 20px; }
@@ -172,7 +172,7 @@
     .govuk-heading-l {
       font-size: 36px;
       font-size: 2.25rem;
-      line-height: 1.11111; } }
+      line-height: 1.1111111111; } }
   @media print {
     .govuk-heading-l {
       font-size: 24pt;
@@ -189,7 +189,7 @@
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   display: block;
   margin-top: 0;
   margin-bottom: 15px; }
@@ -234,7 +234,7 @@
     .govuk-heading-s {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-heading-s {
       font-size: 14pt;
@@ -250,7 +250,7 @@
   font-weight: 400;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   display: block;
   margin-bottom: 5px;
   color: #6f777b; }
@@ -261,7 +261,7 @@
     .govuk-caption-xl {
       font-size: 27px;
       font-size: 1.6875rem;
-      line-height: 1.11111; } }
+      line-height: 1.1111111111; } }
   @media print {
     .govuk-caption-xl {
       font-size: 18pt;
@@ -274,7 +274,7 @@
   font-weight: 400;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   display: block;
   margin-bottom: 5px;
   color: #6f777b; }
@@ -311,7 +311,7 @@
     .govuk-caption-m {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-caption-m {
       font-size: 14pt;
@@ -325,7 +325,7 @@
   font-weight: 400;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   margin-top: 0;
   margin-bottom: 20px; }
   @media print {
@@ -368,7 +368,7 @@
     .govuk-body-m, .govuk-body {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-body-m, .govuk-body {
       font-size: 14pt;
@@ -385,7 +385,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   margin-top: 0;
   margin-bottom: 15px; }
   @media print {
@@ -428,7 +428,7 @@
     .govuk-body-xs {
       font-size: 14px;
       font-size: 0.875rem;
-      line-height: 1.42857; } }
+      line-height: 1.4285714286; } }
   @media print {
     .govuk-body-xs {
       font-size: 12pt;
@@ -696,7 +696,7 @@
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   display: inline-block;
   margin-bottom: 0;
   padding-top: 15px; }
@@ -748,7 +748,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -868,7 +868,7 @@
 .govuk-back-link {
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -928,7 +928,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   color: #0b0c0c;
   margin-top: 15px;
   margin-bottom: 10px; }
@@ -1075,8 +1075,7 @@
 .govuk-button--disabled,
 .govuk-button[disabled="disabled"],
 .govuk-button[disabled] {
-  opacity: 0.5;
-  background: #00823b; }
+  opacity: 0.5; }
   .govuk-button--disabled:hover,
   .govuk-button[disabled="disabled"]:hover,
   .govuk-button[disabled]:hover {
@@ -1099,6 +1098,8 @@
     color: #0b0c0c; }
   .govuk-button--secondary:hover, .govuk-button--secondary:focus {
     background-color: #c8cacb; }
+    .govuk-button--secondary:hover[disabled], .govuk-button--secondary:focus[disabled] {
+      background-color: #dee0e2; }
 
 .govuk-button--warning {
   background-color: #b10e1e;
@@ -1107,6 +1108,8 @@
     color: #ffffff; }
   .govuk-button--warning:hover, .govuk-button--warning:focus {
     background-color: #8e0b18; }
+    .govuk-button--warning:hover[disabled], .govuk-button--warning:focus[disabled] {
+      background-color: #b10e1e; }
 
 .govuk-button--start {
   font-weight: 700;
@@ -1162,7 +1165,7 @@
     .govuk-error-message {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-error-message {
       font-size: 14pt;
@@ -1206,7 +1209,7 @@
     .govuk-fieldset__legend {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-fieldset__legend {
       font-size: 14pt;
@@ -1231,7 +1234,7 @@
     .govuk-fieldset__legend--xl {
       font-size: 48px;
       font-size: 3rem;
-      line-height: 1.04167; } }
+      line-height: 1.0416666667; } }
   @media print {
     .govuk-fieldset__legend--xl {
       font-size: 32pt;
@@ -1244,7 +1247,7 @@
   font-weight: 700;
   font-size: 24px;
   font-size: 1.5rem;
-  line-height: 1.04167;
+  line-height: 1.0416666667;
   margin-bottom: 15px; }
   @media print {
     .govuk-fieldset__legend--l {
@@ -1253,7 +1256,7 @@
     .govuk-fieldset__legend--l {
       font-size: 36px;
       font-size: 2.25rem;
-      line-height: 1.11111; } }
+      line-height: 1.1111111111; } }
   @media print {
     .govuk-fieldset__legend--l {
       font-size: 24pt;
@@ -1266,7 +1269,7 @@
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   margin-bottom: 15px; }
   @media print {
     .govuk-fieldset__legend--m {
@@ -1296,7 +1299,7 @@
     .govuk-fieldset__legend--s {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-fieldset__legend--s {
       font-size: 14pt;
@@ -1325,7 +1328,7 @@
     .govuk-hint {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-hint {
       font-size: 14pt;
@@ -1359,7 +1362,7 @@
     .govuk-label {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-label {
       font-size: 14pt;
@@ -1384,7 +1387,7 @@
     .govuk-label--xl {
       font-size: 48px;
       font-size: 3rem;
-      line-height: 1.04167; } }
+      line-height: 1.0416666667; } }
   @media print {
     .govuk-label--xl {
       font-size: 32pt;
@@ -1397,7 +1400,7 @@
   font-weight: 700;
   font-size: 24px;
   font-size: 1.5rem;
-  line-height: 1.04167;
+  line-height: 1.0416666667;
   margin-bottom: 15px; }
   @media print {
     .govuk-label--l {
@@ -1406,7 +1409,7 @@
     .govuk-label--l {
       font-size: 36px;
       font-size: 2.25rem;
-      line-height: 1.11111; } }
+      line-height: 1.1111111111; } }
   @media print {
     .govuk-label--l {
       font-size: 24pt;
@@ -1419,7 +1422,7 @@
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   margin-bottom: 10px; }
   @media print {
     .govuk-label--m {
@@ -1449,7 +1452,7 @@
     .govuk-label--s {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-label--s {
       font-size: 14pt;
@@ -1479,7 +1482,7 @@
     .govuk-checkboxes__item {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-checkboxes__item {
       font-size: 14pt;
@@ -1658,7 +1661,7 @@
     .govuk-summary-list {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-summary-list {
       font-size: 14pt;
@@ -1806,7 +1809,7 @@
     .govuk-input {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-input {
       font-size: 14pt;
@@ -1883,7 +1886,7 @@
     .govuk-details {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-details {
       font-size: 14pt;
@@ -1985,7 +1988,7 @@
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   margin-top: 0;
   margin-bottom: 15px; }
   @media print {
@@ -2019,7 +2022,7 @@
     .govuk-error-summary__body {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-error-summary__body {
       font-size: 14pt;
@@ -2062,7 +2065,7 @@
     .govuk-file-upload {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-file-upload {
       font-size: 14pt;
@@ -2084,7 +2087,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   padding-top: 25px;
   padding-bottom: 15px;
   border-top: 1px solid #a1acb2;
@@ -2288,7 +2291,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   border-bottom: 10px solid #ffffff;
   color: #ffffff;
   background: #0b0c0c; }
@@ -2342,7 +2345,7 @@
   font-weight: 400;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111;
+  line-height: 1.1111111111;
   display: inline-table;
   padding-right: 10px; }
   @media print {
@@ -2397,7 +2400,7 @@
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.11111; }
+  line-height: 1.1111111111; }
   @media print {
     .govuk-header__link--service-name {
       font-family: sans-serif; } }
@@ -2441,7 +2444,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   display: none;
   position: absolute;
   top: 20px;
@@ -2545,7 +2548,7 @@
     font-weight: 700;
     font-size: 14px;
     font-size: 0.875rem;
-    line-height: 1.14286;
+    line-height: 1.1428571429;
     white-space: nowrap; }
     @media print {
       .govuk-header__navigation-item a {
@@ -2581,8 +2584,7 @@
   .govuk-header__link:after {
     display: none; } }
 
-.govuk-header__logotype-crown,
-.govuk-header__logotype-crown-fallback-image {
+.govuk-header__logotype-crown {
   position: relative;
   top: -4px; }
 
@@ -2610,7 +2612,7 @@
     .govuk-inset-text {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-inset-text {
       font-size: 14pt;
@@ -2650,7 +2652,7 @@
     .govuk-panel {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-panel {
       font-size: 14pt;
@@ -2680,7 +2682,7 @@
     .govuk-panel__title {
       font-size: 48px;
       font-size: 3rem;
-      line-height: 1.04167; } }
+      line-height: 1.0416666667; } }
   @media print {
     .govuk-panel__title {
       font-size: 32pt;
@@ -2696,7 +2698,7 @@
   font-weight: 400;
   font-size: 24px;
   font-size: 1.5rem;
-  line-height: 1.04167; }
+  line-height: 1.0416666667; }
   @media print {
     .govuk-panel__body {
       font-family: sans-serif; } }
@@ -2704,7 +2706,7 @@
     .govuk-panel__body {
       font-size: 36px;
       font-size: 2.25rem;
-      line-height: 1.11111; } }
+      line-height: 1.1111111111; } }
   @media print {
     .govuk-panel__body {
       font-size: 24pt;
@@ -2756,7 +2758,7 @@
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   color: #0b0c0c;
   display: table;
   margin: 0; }
@@ -2801,7 +2803,7 @@
     .govuk-tabs {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-tabs {
       font-size: 14pt;
@@ -2832,7 +2834,7 @@
     .govuk-tabs__title {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-tabs__title {
       font-size: 14pt;
@@ -2894,7 +2896,7 @@
     .govuk-tabs__tab {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-tabs__tab {
       font-size: 14pt;
@@ -2983,7 +2985,7 @@
     .govuk-radios__item {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-radios__item {
       font-size: 14pt;
@@ -3089,7 +3091,7 @@
     .govuk-radios__divider {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-radios__divider {
       font-size: 14pt;
@@ -3221,7 +3223,7 @@
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.14286;
+  line-height: 1.1428571429;
   display: block;
   padding: 10px 15px; }
   .govuk-skip-link:active, .govuk-skip-link:focus {
@@ -3280,7 +3282,7 @@
     .govuk-table {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-table {
       font-size: 14pt;
@@ -3382,7 +3384,7 @@
     .govuk-warning-text {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.31579; } }
+      line-height: 1.3157894737; } }
   @media print {
     .govuk-warning-text {
       font-size: 14pt;
@@ -4090,7 +4092,7 @@
 .govuk-\!-font-size-80 {
   font-size: 53px !important;
   font-size: 3.3125rem !important;
-  line-height: 1.03774 !important; }
+  line-height: 1.0377358491 !important; }
   @media (min-width: 40.0625em) {
     .govuk-\!-font-size-80 {
       font-size: 80px !important;
@@ -4109,7 +4111,7 @@
     .govuk-\!-font-size-48 {
       font-size: 48px !important;
       font-size: 3rem !important;
-      line-height: 1.04167 !important; } }
+      line-height: 1.0416666667 !important; } }
   @media print {
     .govuk-\!-font-size-48 {
       font-size: 32pt !important;
@@ -4118,12 +4120,12 @@
 .govuk-\!-font-size-36 {
   font-size: 24px !important;
   font-size: 1.5rem !important;
-  line-height: 1.04167 !important; }
+  line-height: 1.0416666667 !important; }
   @media (min-width: 40.0625em) {
     .govuk-\!-font-size-36 {
       font-size: 36px !important;
       font-size: 2.25rem !important;
-      line-height: 1.11111 !important; } }
+      line-height: 1.1111111111 !important; } }
   @media print {
     .govuk-\!-font-size-36 {
       font-size: 24pt !important;
@@ -4132,12 +4134,12 @@
 .govuk-\!-font-size-27 {
   font-size: 18px !important;
   font-size: 1.125rem !important;
-  line-height: 1.11111 !important; }
+  line-height: 1.1111111111 !important; }
   @media (min-width: 40.0625em) {
     .govuk-\!-font-size-27 {
       font-size: 27px !important;
       font-size: 1.6875rem !important;
-      line-height: 1.11111 !important; } }
+      line-height: 1.1111111111 !important; } }
   @media print {
     .govuk-\!-font-size-27 {
       font-size: 18pt !important;
@@ -4146,7 +4148,7 @@
 .govuk-\!-font-size-24 {
   font-size: 18px !important;
   font-size: 1.125rem !important;
-  line-height: 1.11111 !important; }
+  line-height: 1.1111111111 !important; }
   @media (min-width: 40.0625em) {
     .govuk-\!-font-size-24 {
       font-size: 24px !important;
@@ -4165,7 +4167,7 @@
     .govuk-\!-font-size-19 {
       font-size: 19px !important;
       font-size: 1.1875rem !important;
-      line-height: 1.31579 !important; } }
+      line-height: 1.3157894737 !important; } }
   @media print {
     .govuk-\!-font-size-19 {
       font-size: 14pt !important;
@@ -4174,7 +4176,7 @@
 .govuk-\!-font-size-16 {
   font-size: 14px !important;
   font-size: 0.875rem !important;
-  line-height: 1.14286 !important; }
+  line-height: 1.1428571429 !important; }
   @media (min-width: 40.0625em) {
     .govuk-\!-font-size-16 {
       font-size: 16px !important;
@@ -4193,7 +4195,7 @@
     .govuk-\!-font-size-14 {
       font-size: 14px !important;
       font-size: 0.875rem !important;
-      line-height: 1.42857 !important; } }
+      line-height: 1.4285714286 !important; } }
   @media print {
     .govuk-\!-font-size-14 {
       font-size: 12pt !important;
